--- a/计算机配置（硬件）.md
+++ b/计算机配置（硬件）.md
@@ -60,6 +60,7 @@ Kingston，ADATA，美商海盗船，三星
 * 如果已经有内存条了要选择相同的DDR代数（不然主板不支持）
 * 内存频率可以比原来的高（高的频率内存会自动降频到低频，与低频内存形成双通道）但不能比原来的低（负优化hhhhh)
 * 插入的时候要插在相同颜色的框框里（当你要装的时候就明白了hhhh)
+* 内存最后要为2的次方数（计算机为二进制储存）
 
 ## 处理器CPU
 
