--- a/计算机配置（硬件）.md
+++ b/计算机配置（硬件）.md
@@ -29,11 +29,12 @@
 
 3. 便捷扩展——移动硬盘 80-120MB/s
 
-##内存条RAM
+## 内存条RAM
 
 **每打开一个应用的的时候，将其内容储存到内存里，关机就没了==（瞬时）==**
 
 快捷键`Ctrl+Shift+Esc`打开任务管理器（或者右键底部菜单栏也可以），在性能里面可以看到**内存使用百分比**
+在界面的右下角可以看到**“已使用的插槽：1/2”**，不要插满了还买了新的hhhh
 
 - 笔记本、台式机、服务器的内存条是不同（买的时候要注意）
 
@@ -102,7 +103,7 @@ i3,i5,i7,i9 +  (第几代，性能指数1-9 (5办公，7游戏，越高性能越
 
 **渲染图像，链接显示器，用于作图/影视，人工智能和游戏，GPU满足特殊需求**
 
-##显示器（屏幕）
+## 显示器（屏幕）
 
 #### 分辨率
 480p,720p,1080p,2k,4k
