--- a/计算机配置（硬件）.md
+++ b/计算机配置（硬件）.md
@@ -34,7 +34,7 @@
 **每打开一个应用的的时候，将其内容储存到内存里，关机就没了==（瞬时）==**
 
 快捷键`Ctrl+Shift+Esc`打开任务管理器（或者右键底部菜单栏也可以），在性能里面可以看到**内存使用百分比**
-在界面的右下角可以看到**“已使用的插槽：1/2”**，不要插满了还买了新的hhhh
+在界面的右下角可以看到 **已使用的插槽：1/2 **，不要插满了还买了新的hhhh
 
 - 笔记本、台式机、服务器的内存条是不同（买的时候要注意）
 
